--- a/github-pullrequest-plugin/pom.xml
+++ b/github-pullrequest-plugin/pom.xml
@@ -44,7 +44,11 @@
         <maven-findbugs-plugin.version>3.0.2</maven-findbugs-plugin.version>
         <powermock.version>1.6.0</powermock.version>
         <logback.version>1.1.3</logback.version>
-        <workflow.version>1.14</workflow.version>
+        <workflow.version>2.6</workflow.version>
+        <workflow-durable-task-step.version>2.4</workflow-durable-task-step.version>
+        <workflow-step-api.version>2.3</workflow-step-api.version>
+        <workflow-basic-steps.version>2.1</workflow-basic-steps.version>
+        <workflow-cps.version>2.17</workflow-cps.version>
         <excluded.tests>**/its/*.java</excluded.tests>
     </properties>
 
@@ -131,7 +135,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-step-api</artifactId>
-            <version>${workflow.version}</version>
+            <version>${workflow-step-api.version}</version>
         </dependency>
 
         <!-- workflow for tests -->
@@ -145,14 +149,14 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-basic-steps</artifactId>
-            <version>${workflow.version}</version>
+            <version>${workflow-basic-steps.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
-            <version>${workflow.version}</version>
+            <version>${workflow-durable-task-step.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -160,7 +164,8 @@
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-cps</artifactId>
             <!-- see https://github.com/jenkinsci/workflow-cps-plugin/pull/7#issuecomment-216587074 -->
-            <version>${workflow.version}-beta-1</version>
+            <!--<version>${workflow.version}-beta-1</version>-->
+            <version>${workflow-cps.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -235,11 +240,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.jenkins-ci.tools</groupId>
-                <artifactId>maven-hpi-plugin</artifactId>
-                <version>${maven-hpi-plugin.version}</version>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
